# genesis

./: .gitignore  Cargo.toml  ECONOMICS.md  INFORMATION.md  LICENSE  README.md  WHITEPAPER.md
src/: lib.rs  main.rs
src/genesis/: genesis.blob  genesis.json  genesis.sig.json
src/schemes/: genesis-smart-1.0.json
